--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -6,7 +6,7 @@
     font-family: Helvetica;
     font-weight: bold;
     font-size: 55px;
-    color: khaki;
+    color: red;
     text-align: center;
     padding-top: auto;
     white-space: nowrap;
